# FeedbackAnalyzer_11

./: .cursorrules  CMakeLists.txt  Cursor AI_퀴즈 - 문제.docx  README.md  project_purpose.md
Prompting/: 01_분석_prompt.md  02_1_RED_promt.md  02_2_GREEN.md  02_3_Goledn_prompt.md  02_미션2_RED_prompt.md  03_BugFix_prompt.md  04_Refactoring_네이밍,전역,매직_prompt.md  05_Refactoring_긴함수,중복_prompt.md  07_Feature_prompt.md  08_CodeReview_promt.md
Report/: 01_분석.md  02_1_RED.md  02_2_GREEN.md  02_3_Golden.md  03_BugFix.md  04_Refactoring_네이밍,전역,매직.md  05_Refactoring_긴함수,중복.md  06_Refactoring_handlers.md  07_Feature.md  08_CodeReview.md
data/: keywords.json  test_feedback_trend.csv
docs/: analyzer.md  bug_fix.md  bug_fix_plan.md  coverage.md  golden_master.md  refactoring.md
docs/coverage/: coverage.functions.html  coverage.html
scripts/: parse_domain_coverage.py  run_coverage.ps1
src/cpp/: AppConfig.h  Constants.cpp  Constants.h  Feedback.h  FileHandler.h  Filters.cpp  Filters.h  HtmlRenderer.cpp  HtmlRenderer.h  Logger.cpp  Logger.h  ParseUtils.cpp  ParseUtils.h  SentimentClassifier.cpp  SentimentClassifier.h  Session.cpp  Session.h  TextAnalyzer.cpp  TextAnalyzer.h  UIComponents.cpp  UIComponents.h  main.cpp
src/cpp/handlers/: Handlers.cpp  Handlers.h
src/cpp/infra/: KeywordFileDb.cpp  KeywordFileDb.h
src/cpp/services/: TrendAggregator.cpp  TrendAggregator.h  TrendLoader.cpp  TrendLoader.h  TrendStore.cpp  TrendStore.h  TrendTypes.h
tests/: coverage_gap_test.cpp  filters_test.cpp  keyword_file_db_test.cpp  parse_utils_test.cpp  regression_neutral_filter_test.cpp  test_fixture.h  text_analyzer_test.cpp  trend_loader_test.cpp
tests/fixtures/: golden_master.json  keywords_invalid.json  keywords_minimal.json  trend_sample.csv
